# MPI-Examples

./: CMakeLists.txt  README.md
Circle/: CMakeLists.txt  Main.cxx
Send-Recieve/: CMakeLists.txt  Main.cxx
Time/: CMakeLists.txt  Main.cxx
